<resources>
    <string name="string_updata">1. sleep display optimization. \n2. calls and SMS alerts optimization. \n3. shake to take photos, even shake Bug repair... \n more functions expect you to enjoy the experience!</string>
    <string name="privacy">Privacy Policy</string>
    <string name="string_data_tell">Double click chart for detail</string>
    <string name="string_net_work">Network settings tips</string>
    <string name="string_no_net_work">Network connection is not available. Is it set?</string>
    <string name="string_open_gps">Please turn on GPS connection</string>
    <string name="string_hello_gps">For accurate measurement, please turn on GPS first</string>
    <string name="string_gps_stute">Open directly after you click the return key, if you do not open it will return again</string>
    <string name="string_qingxing">Wide awake</string>
    <string name="string_shensuhi_time">Deep sleep time</string>
    <string name="string_qianshui_time">Shallow sleep time</string>
    <string name="string_qingxing_time">Awake time</string>
    <string name="string_running">Run</string>
    <string name="string_cycling">Cycling</string>
    <string name="string_harete_data">Heart rate data</string>
    <string name="string_one_day_record">One-day record</string>
    <string name="string_selecte_sleep_stuta">Long press move view sleep detail</string>
    <string name="string_w30s_ota_file">OTA file is incomplete</string>
    <string name="string_w30s_re_upgrade">Re-upgrade</string>
    <string name="string_w30s_upgrade_failed">Upgrade failed</string>
    <string name="string_w30s_prepare_updates">Prepare for updates</string>
    <string name="string_w30s_device_connection">Device connection...</string>
    <string name="string_w30s_upgradeable">Upgradeable</string>
    <string name="string_w30s_reacquire_version">Reacquire the version</string>
    <string name="string_w30s_up_isok">4.After the upgrade is successful, you must restart the application</string>
    <string name="string_w30s_up_error">5.Upgrade fails to disconnect Bluetooth 200s watch launch upgrade mode</string>
    <string name="string_w30s_up_statu">Upgrade state prohibited operation</string>
    <string name="string_w30s_up_zip">Get upgrade resources</string>
    <string name="string_w30s_alldis">Total mileage</string>
    <string name="string_w30s_upgrade">Start the upgrade</string>
    <string name="string_w30s_up_one">1.Keep enough power before upgrading</string>
    <string name="string_w30s_up_two">2.Do not disconnect during the upgrade operation</string>
    <string name="string_w30s_up_three">3.It may take a few minutes to upgrade</string>
    <string name="string_no_dialog">After the device is turned on, the device stops receiving notifications during the period from 22:00 to 08:00, and the screen-raising function stops.</string>
    <string name="string_standar">Reach</string>
    <string name="string_today_sleep_all_time">Sleep time</string>
    <string name="sleep_data_history">history record</string>
    <string name="string_sports_total">Outdoor sports total mileage of the day</string>
    <string name="string_sport_all_data">Running total mileage</string>
    <string name="string_run_all_data">Total mileage</string>
    <string name="string_find_watch">Find watch</string>
    <string name="string_january">Jan</string>
    <string name="string_february">Feb</string>
    <string name="string_march">Mar</string>
    <string name="string_april">Apr</string>
    <string name="string_may">May</string>
    <string name="string_june">Jun</string>
    <string name="string_july">Jul</string>
    <string name="string_august">Aug</string>
    <string name="string_deptember">Dep</string>
    <string name="string_october">Oct</string>
    <string name="string_november">Nov</string>
    <string name="string_december">Dec</string>
    <string name="string_healthy_noti">Health reminder</string>
    <string name="string_step_day">Steps/day</string>
    <string name="string_step_year">Steps/month</string>
    <string name="string_heart_day">Heart rate/day</string>
    <string name="string_heart_year">Heart rate/month</string>
    <string name="string_sleep_day">Sleep/Day</string>
    <string name="string_sleep_year">Sleep/month</string>
    <string name="string_data_chart_pingjun">Average：</string>
    <string name="string_third_login_changepass">Third-party login can not modify the password!</string>
    <string name="string_disconnected_ok">Is the current connection disconnected?</string>
    <string name="string_no_data">No Data!</string>
    <string name="string_open_camera_permissions">Failed to open the camera with authorization failure?</string>
    <string name="string_Immediate_experience">Immediate experience</string>
    <string name="string_not_disturb">Do not disturb mode</string>
    <string name="string_application_reminding">Application reminder</string>
    <string name="string_clock_setting">Alarm setting</string>
    <string name="string_equipment_reminding">Health reminder</string>
    <string name="string_unit_setting">Unit setting</string>
    <string name="string_factory_setting">Reset</string>
    <string name="string_water_clock">Drinking reminder</string>
    <string name="string_drug_reminding">Medication reminder</string>
    <string name="string_conference_reminding">Conference reminder</string>
    <string name="string_contacts">Contacts</string>
    <string name="string_search_friends">Search for friends</string>
    <string name="string_friends_information">Nickname / mobile number / email</string>
    <string name="string_new_friends">New friends</string>
    <string name="string_new_phone">Call</string>
    <string name="string_new_messege">SMS</string>
    <string name="string_reminding_times">Reminder interval</string>
    <string name="string_reminding_start_end_times">Start  - End</string>
    <string name="string_reminding_metting_datas">Effective date：</string>
    <string name="string_reminding_metting_times">Effective time：</string>
    <string name="string_reminding_text">Try setting an alarm and remind yourself to do the scheduled thing</string>
    <string name="notif_explain">Explain:</string>
    <string name="notif_messge">Message alerts need to open notifications or auxiliary functions</string>
    <string name="open_notif">Open the notice</string>
    <string name="open_function">Open the auxiliary function</string>
    <string name="device_times">Equipment time</string>
    <string name="now_times">current time</string>
    <string name="get_device_times">Get equipment time</string>
    <string name="correct_pointer_times">The pointer is wrong? To correct</string>
    <string name="sporttimes">Number of times</string>
    <string name="grandtotalstep">Cumulative step</string>
    <string name="grandtotal">Cumulative duration</string>
    <string name="sportdata">Sports data</string>
    <string name="avg_speed">Avg speed</string>
    <string name="long_onclick">Long press \'+\' and \'-\' can be set to adjust the larger angle</string>
    <string name="add_sharpe">Synthesis and sharing</string>
    <string name="syncy_data">Synchronize the data</string>
    <string name="connted">connected</string>
    <string name="disconnted">Disconnected</string>
    <string name="nodata">No Data</string>
    <string name="age">Age</string>
    <string name="alarm_eat">Having dinner</string>
    <string name="alarm_medicine">Take pills</string>
    <string name="alarm_dring">Drink water</string>
    <string name="alarm_sp">Sleep</string>
    <string name="alarm_awakes">Get up</string>
    <string name="alarm_spr">motion</string>
    <string name="alarm_metting">Meeting</string>
    <string name="alarm_custom">Custom</string>
    <string name="history_times">Historical time</string>
    <string name="search_alert">Search device please open the phone Bluetooth and GPS</string>
    <string name="sleep_deep">Deep Sleep</string>
    <string name="sleep_light">Light Sleep</string>
    <string name="long_when">Duration</string>
    <string name="sleep_asleep">Fall Asleep Time</string>
    <string name="recovery_count">Wake count</string>
    <string name="recovery_time">Recovery Time</string>
    <string name="mine_equipment">My device</string>
    <string name="low_voltage">Low voltage limit</string>
    <string name="high_voltage">High voltage restriction</string>
    <string name="year">Year</string>
    <string name="news">News</string>
    <string name="messages">Receive new messages</string>
    <string name="system_settings">System settings</string>
    <string name="guide">School hour Guide</string>
    <string name="step_one">1.\t When the watch is connected to the App, click the zeroing button first</string>
    <string name="step_two">2.\t Select clockwise, minute, press the + and - adjustable needle to 12:00 whole</string>
    <string name="step_three">3.\t Click Finish button to achieve automatic needle chasing time</string>
    <string name="manualsleep">Manual sleep</string>
    <string name="automaticsleep">Automatic sleep</string>
    <string name="dlog">Load...</string>
    <string name="minezhen">Minute hand</string>
    <string name="hourzhen">Hour hand</string>
    <string name="zero">Return to zero</string>
    <string name="setmi">Imperial</string>
    <string name="setkm">Metric</string>
    <string name="jiaozhen">School pin</string>
    <string name="unit">unit</string>
    <string name="heartcheck">Heart rate test</string>
    <string name="auxiliary_function">If you open the message, or you can\'t receive a message reminder, you can try to open the auxiliary function.
        \n If you can receive a notification message, then you can ignore its presence, or you can notify or restrict the accessibility to one.
        \n (this function is set up to solve the problem that some models can not receive messages and can receive messages. This feature will cause messages to be reminded and repeated.)</string>
    <string name="siren_str">Ranking List</string>
    <string name="personal_str">Personal data</string>
    <string name="function_str">Function settings</string>
    <string name="find_str">Find friends</string>
    <string name="waking_state">Sober State</string>
    <string name="shallow_sleep">Shallow Sleep</string>
    <string name="deep_sleep">Deep Sleep</string>
    <string name="mileage_km">Mileage/km</string>
    <string name="ranking">Ranking</string>
    <string name="daily_distancia">Al movimiento a distancia</string>
    <string name="notice_str">Notify</string>
    <string name="shock_str">Shock</string>
    <string name="time_forma">Time format</string>
    <string name="advanced_setting">Advanced setting</string>
    <string name="add_frendes">Add friends</string>
    <string name="scan_frend">Search</string>
    <string name="reset_device">Reset device</string>
    <string name="heart_rate_test">heart rate test</string>
    <string name="heart_rate_warning_range">Heart rate warning range</string>
    <string name="close_str">off</string>
    <string name="weak_str">weak</string>
    <string name="standard_str">standard</string>
    <string name="strong_str">strong</string>
    <string name="preset_sleep">Preset sleep</string>
    <string name="missed_calls">Missed Calls</string>
    <string name="latest_version">Is the latest version</string>
    <string name="auto_upgrade">Automatic upgrade....</string>
    <string name="save">save</string>
    <string name="mine">My</string>
    <string name="data">Data</string>
    <string name="recording">Record</string>
    <string name="move_ment">Motion</string>
    <string name="one_h">MON</string>
    <string name="two_h">TUE</string>
    <string name="three_h">WED</string>
    <string name="four_h">THU</string>
    <string name="five_h">FRI</string>
    <string name="six_h">SAT</string>
    <string name="day">SUN</string>
</resources>