<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/b18i_titil_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginLeft="@dimen/size_30"
        android:layout_marginRight="@dimen/size_30"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/string_w30s_up_one"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/string_w30s_up_two"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/string_w30s_up_three"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/string_w30s_up_isok"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/string_w30s_up_error"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_30"
        android:layout_marginRight="@dimen/size_30"
        android:layout_weight="2"
        android:gravity="bottom"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/up_prooss"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/progress_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:gravity="center"
                android:padding="@dimen/size_5"
                android:text="@string/auto_upgrade"
                android:textColor="#666666"
                android:textSize="@dimen/text_size_14" />

            <ProgressBar
                android:id="@+id/progressBar_upgrade"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/w30s_up_bar_color" />
        </LinearLayout>


        <Button
            android:layout_marginBottom="@dimen/size_30"
            android:id="@+id/btn_start_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/w30s_blue_background_on"
            android:text="@string/latest_version"
            android:textColor="#ffffff" />


        <!--android:background="@drawable/w30s_blue_background_on"-->
        <!--android:background="@drawable/w30s_blue_background_off"-->

    </LinearLayout>

</LinearLayout>