<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#32c0ff">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_5"
            android:padding="@dimen/size_10"
            android:src="@mipmap/backs" />


        <TextView
            android:id="@+id/bar_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="title"
            android:textColor="#ffffffff"
            android:textSize="@dimen/size_20" />


        <!--<ImageView-->
            <!--android:id="@+id/image_right"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="@dimen/size_5"-->
            <!--android:padding="@dimen/size_10"-->
            <!--android:src="@mipmap/rtb" />-->


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#32c0ff"
        android:orientation="vertical">

        <TimePicker
            android:layout_marginTop="@dimen/size_20"
            android:id="@+id/timer_set"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:headerBackground="#32c0ff"
            android:theme="@style/Theme.picker"
            android:timePickerMode="spinner" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/size_10">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_10">

                    <CheckBox
                        android:textColor="#ffffff"
                        android:id="@+id/checkbox_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/b18i_text_unselect"
                        android:button="@null"
                        android:layout_margin="@dimen/size_5"
                        android:gravity="center"
                        android:padding="@dimen/size_5"
                        android:text="@string/day"
                        android:textSize="@dimen/text_size_15" />

                    <CheckBox
                        android:textColor="#ffffff"
                        android:id="@+id/checkbox_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/b18i_text_unselect"
                        android:button="@null"
                        android:layout_margin="@dimen/size_5"
                        android:gravity="center"
                        android:padding="@dimen/size_5"
                        android:text="@string/one_h"
                        android:textSize="@dimen/text_size_15" />

                    <CheckBox
                        android:textColor="#ffffff"
                        android:id="@+id/checkbox_two"
                        android:layout_margin="@dimen/size_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/b18i_text_unselect"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="@dimen/size_5"
                        android:text="@string/two_h"
                        android:textSize="@dimen/text_size_15" />

                    <CheckBox
                        android:textColor="#ffffff"
                        android:id="@+id/checkbox_three"
                        android:layout_margin="@dimen/size_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/b18i_text_unselect"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="@dimen/size_5"
                        android:text="@string/three_h"
                        android:textSize="@dimen/text_size_15" />

                    <CheckBox
                        android:textColor="#ffffff"
                        android:id="@+id/checkbox_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/size_5"
                        android:background="@drawable/b18i_text_unselect"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="@dimen/size_5"
                        android:text="@string/four_h"
                        android:textSize="@dimen/text_size_15" />

                    <CheckBox
                        android:textColor="#ffffff"
                        android:id="@+id/checkbox_five"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/size_5"
                        android:background="@drawable/b18i_text_unselect"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="@dimen/size_5"
                        android:text="@string/five_h"
                        android:textSize="@dimen/text_size_15" />

                    <CheckBox
                        android:textColor="#ffffff"
                        android:id="@+id/checkbox_six"
                        android:layout_width="wrap_content"
                        android:layout_margin="@dimen/size_5"
                        android:layout_height="wrap_content"
                        android:background="@drawable/b18i_text_unselect"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="@dimen/size_5"
                        android:text="@string/six_h"
                        android:textSize="@dimen/text_size_15" />

                </LinearLayout>

                <Button
                    android:id="@+id/image_right"
                    android:textColor="#ffffff"
                    android:text="@string/save"
                    android:background="@drawable/w30s_blue_background_off"
                    android:layout_marginLeft="@dimen/size_25"
                    android:layout_marginRight="@dimen/size_25"
                    android:layout_marginBottom="@dimen/size_30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>