<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    android:gravity="center_vertical"
    android:orientation="vertical">
    <!--android:focusable="false"-->
    <!--android:clickable="false"-->
    <!--android:descendantFocusability="blocksDescendants"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/b18i_selected_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layout_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/size_5"
            tools:ignore="InefficientWeight">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12:00"
                    android:textColor="@color/head_text"
                    android:textSize="@dimen/text_size_20"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/head_text"
                    android:textSize="@dimen/text_size_20"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/text_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textColor="@color/head_text"
                    android:textSize="@dimen/text_size_20"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal"
                    tools:ignore="ScrollViewSize">

                    <TextView
                        android:id="@+id/text_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:text=""
                        android:textColor="@color/head_text"
                        android:textSize="@dimen/text_size_15"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/text_type_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:lines="1"
                        android:text="@string/one_h"
                        android:textColor="@color/head_text"
                        android:textSize="@dimen/text_size_15"
                        android:visibility="gone"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/text_type_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:lines="1"
                        android:text="@string/two_h"
                        android:textColor="@color/head_text"
                        android:textSize="@dimen/text_size_15"
                        android:visibility="gone"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/text_type_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:lines="1"
                        android:text="@string/three_h"
                        android:textColor="@color/head_text"
                        android:textSize="@dimen/text_size_15"
                        android:visibility="gone"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/text_type_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:lines="1"
                        android:text="@string/four_h"
                        android:textColor="@color/head_text"
                        android:textSize="@dimen/text_size_15"
                        android:visibility="gone"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/text_type_five"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:lines="1"
                        android:text="@string/five_h"
                        android:textColor="@color/head_text"
                        android:textSize="@dimen/text_size_15"
                        android:visibility="gone"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/text_type_six"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:lines="1"
                        android:text="@string/six_h"
                        android:textColor="@color/head_text"
                        android:textSize="@dimen/text_size_15"
                        android:visibility="gone"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/text_type_senven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:lines="1"
                        android:text="@string/day"
                        android:textColor="@color/head_text"
                        android:textSize="@dimen/text_size_15"
                        android:visibility="gone"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

        <Switch
            android:id="@+id/switch_alarm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/size_5" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/size_15"
        android:background="#999999" />

</LinearLayout>